.provarCaches/00D5f000005vwGkEAI/objects/rstkf__apapplic__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_apapplic</customHelpPage>
    <description>apapplic__c</description>
    <fields>
        <fullName>rstkf__Application_Amount_Home__c</fullName>
        <formula>rstkf__apapplic_payamt__c  *  rstkf__apapplic_appayd__r.rstkf__appayd_maintexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Amount - Home</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_appayd__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Link to the Payment Detail record for this transaction</inlineHelpText>
        <label>Payment Detail</label>
        <referenceTo>rstkf__appayd__c</referenceTo>
        <relationshipLabel>Payable Application Transactions</relationshipLabel>
        <relationshipName>apapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_appayd_gltxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Link to the corresponding GL Transaction, if applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>Payable Application Transactions</relationshipLabel>
        <relationshipName>apapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_applieditemexchrate__c</fullName>
        <inlineHelpText>Applicable exchange rate for Vendor Credit applied at the time the Vendor Credit was created</inlineHelpText>
        <label>Exchange Rate of Vendor Credit</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_appliedspotexchrate__c</fullName>
        <inlineHelpText>Actual spot exchange rate for Vendor Credit as of the time the amount was applied</inlineHelpText>
        <label>Spot Exchange Rate of Amount Applied</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_appliedspotrateschedno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the number representing the actual Spot Rate Schedule used for getting the &apos;Spot Exchange Rate of Amount Applied&apos; set on this record</inlineHelpText>
        <label>Spot Rate Schedule Number Applied</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Payable Application Transactions (Spot Rate Schedule Number Applied)</relationshipLabel>
        <relationshipName>apapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_comments__c</fullName>
        <inlineHelpText>Applicable Comments entered at the time of performing the credit application</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_crapinvtxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable Vendor Credit applied to Payable Invoice</inlineHelpText>
        <label>Vendor Credit</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Payable Application Transactions (Vendor Credit)</relationshipLabel>
        <relationshipName>crapapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_dateappl__c</fullName>
        <inlineHelpText>The date that a credit was applied to a Payable Invoice or Vendor Debit</inlineHelpText>
        <label>Date Applied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_drapinvtxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The applicable Payable Transaction (where Transaction Type = Invoice)</inlineHelpText>
        <label>Payable Invoice</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipName>drapapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_maintamtapplied__c</fullName>
        <inlineHelpText>The credit amount applied to the given Payable Invoice or Vendor Debit</inlineHelpText>
        <label>Application Amount Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_maintamtpayable__c</fullName>
        <inlineHelpText>The payable amount prior to the credit application</inlineHelpText>
        <label>Application Amount Payable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_maintcurrapplied__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Maintenance Currency (aka transaction currency) for the applied amount</inlineHelpText>
        <label>Maintenance Currency Applied</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payable Application Transactions (Maintenance Currency Applied)</relationshipLabel>
        <relationshipName>applied_apapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_maintcurrpayable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Maintenance Currency (aka transaction currency) for this Payable Invoice or Vendor Debit</inlineHelpText>
        <label>Maintenance Currency Payable</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payable Application Transactions (Maintenance Currency Payable)</relationshipLabel>
        <relationshipName>payable_apapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_orig_dateappl__c</fullName>
        <inlineHelpText>When a Credit application predates the accounting date of either the invoice or credit requiring a change to the Date Applied, the original Date Applied is preserved here.</inlineHelpText>
        <label>Original Date Applied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_origin__c</fullName>
        <inlineHelpText>A &apos;P&apos; value represents a payment that has no credit applied; a &apos;V&apos; value represents on that has had a Vendor Credit applied</inlineHelpText>
        <label>Origin</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_payableitemexchrate__c</fullName>
        <inlineHelpText>Applicable exchange rate for Payable Invoice or Vendor Debit at the time records were created</inlineHelpText>
        <label>Exchange Rate of Invoice/Debit</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_payablespotexchrate__c</fullName>
        <inlineHelpText>Actual spot exchange rate for payable amount as of the time an applicable credit was applied</inlineHelpText>
        <label>Spot Exchange Rate of Amount Payable</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_payablespotrateschedno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the number representing the actual Spot Rate Schedule used for getting the &apos;Spot Exchange Rate of Amount Payable&apos; set on this record</inlineHelpText>
        <label>Spot Rate Schedule Number Payable</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Payable Application Transactions (Spot Rate Schedule Number Payable)</relationshipLabel>
        <relationshipName>apapplics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_payamt__c</fullName>
        <inlineHelpText>The credit amount applied to the given Payable Invoice or Vendor Debit expressed in payment currency</inlineHelpText>
        <label>Application Amount in Pay Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_paycred__c</fullName>
        <formula>IF( ISBLANK(rstkf__apapplic_crapinvtxn__c) , rstkf__apapplic_appayd__r.rstkf__appayd_checknumber__c, rstkf__apapplic_crapinvtxn__r.rstkf__apinvtxn_docno__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the payment or vendor credit used to &quot;pay&quot; for this payable transaction</inlineHelpText>
        <label>Payment or Vendor Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_paycurrpayable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Payment Currency for this Payable Invoice or Vendor Debit</inlineHelpText>
        <label>Payment Currency Payable</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payable Application Transactions (Payment Currency Payable)</relationshipLabel>
        <relationshipName>apapplics1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_payexchrate__c</fullName>
        <inlineHelpText>Actual spot exchange rate between the payment currency and home currency</inlineHelpText>
        <label>Spot Exchange Rate of Pay Curr to Bank</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_printcheckind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the credit applied is to be printed on the check stub when the corresponding check for the Payable Invoice is created</inlineHelpText>
        <label>Print on Check Stub Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_printsession__c</fullName>
        <label>Print Session</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_refappayd__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reference Payment Transaction</label>
        <referenceTo>rstkf__appayd__c</referenceTo>
        <relationshipLabel>Payable Application Transactions (Reference Payment Transaction)</relationshipLabel>
        <relationshipName>refapapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_seqno__c</fullName>
        <inlineHelpText>If more than one Vendor Credit has been applied, Sequence Number is incremented for each application against the same Payable Invoice</inlineHelpText>
        <label>Sequence Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_session__c</fullName>
        <inlineHelpText>The payment Session ID in which this transaction was paid</inlineHelpText>
        <label>Session</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apapplic_vendno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Applicable Vendor for this transaction</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Payable Application Transactions</relationshipLabel>
        <relationshipName>apapplics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT(rstkf__apapplic_drapinvtxn__r.rstkf__apinvtxn_docno__c + &quot;-&quot; + (IF( ISBLANK(rstkf__apapplic_crapinvtxn__c) , rstkf__apapplic_appayd__r.Name, rstkf__apapplic_crapinvtxn__r.rstkf__apinvtxn_docno__c))+ &quot; )&quot;,80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payable Application Transaction</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Payable_Application_Filtered_jsf</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apapplic_vendno__c</columns>
        <columns>rstkf__apapplic_appayd__c</columns>
        <columns>rstkf__apapplic_refappayd__c</columns>
        <columns>rstkf__apapplic_origin__c</columns>
        <columns>rstkf__apapplic_crapinvtxn__c</columns>
        <columns>rstkf__apapplic_paycred__c</columns>
        <columns>rstkf__apapplic_maintamtpayable__c</columns>
        <columns>rstkf__apapplic_maintamtapplied__c</columns>
        <columns>rstkf__apapplic_payamt__c</columns>
        <columns>rstkf__apapplic_paycurrpayable__c</columns>
        <columns>rstkf__apapplic_session__c</columns>
        <columns>rstkf__apapplic_maintcurrapplied__c</columns>
        <columns>rstkf__apapplic_maintcurrpayable__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>12/4/2018 12:00 AM</value>
        </filters>
        <label>Payable Application - Filtered- jsf</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__Payable_Application_Filtered_today</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apapplic_vendno__c</columns>
        <columns>rstkf__apapplic_appayd__c</columns>
        <columns>rstkf__apapplic_refappayd__c</columns>
        <columns>rstkf__apapplic_origin__c</columns>
        <columns>rstkf__apapplic_crapinvtxn__c</columns>
        <columns>rstkf__apapplic_printcheckind__c</columns>
        <columns>rstkf__apapplic_paycred__c</columns>
        <columns>rstkf__apapplic_maintamtpayable__c</columns>
        <columns>rstkf__apapplic_maintamtapplied__c</columns>
        <columns>rstkf__apapplic_payamt__c</columns>
        <columns>rstkf__apapplic_paycurrpayable__c</columns>
        <columns>rstkf__apapplic_maintcurrpayable__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Payable Application - Filtered- today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Payable_Application</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apapplic_vendno__c</columns>
        <columns>rstkf__apapplic_appayd__c</columns>
        <columns>rstkf__apapplic_drapinvtxn__c</columns>
        <columns>rstkf__apapplic_crapinvtxn__c</columns>
        <columns>rstkf__apapplic_paycred__c</columns>
        <columns>rstkf__apapplic_origin__c</columns>
        <columns>rstkf__apapplic_session__c</columns>
        <columns>rstkf__apapplic_maintamtpayable__c</columns>
        <columns>rstkf__apapplic_maintamtapplied__c</columns>
        <columns>rstkf__apapplic_payamt__c</columns>
        <columns>rstkf__apapplic_maintcurrapplied__c</columns>
        <columns>rstkf__apapplic_maintcurrpayable__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Payable Application Transaction</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Payable_Application_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apapplic_vendno__c</columns>
        <columns>rstkf__apapplic_appayd__c</columns>
        <columns>rstkf__apapplic_refappayd__c</columns>
        <columns>rstkf__apapplic_origin__c</columns>
        <columns>rstkf__apapplic_crapinvtxn__c</columns>
        <columns>rstkf__apapplic_paycred__c</columns>
        <columns>rstkf__apapplic_maintamtpayable__c</columns>
        <columns>rstkf__apapplic_maintamtapplied__c</columns>
        <columns>rstkf__apapplic_payamt__c</columns>
        <columns>rstkf__apapplic_paycurrpayable__c</columns>
        <columns>rstkf__apapplic_session__c</columns>
        <columns>rstkf__apapplic_maintcurrapplied__c</columns>
        <columns>rstkf__apapplic_maintcurrpayable__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Payable Application - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payable Application Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>